--- a/css/version/food.css
+++ b/css/version/food.css
@@ -46,7 +46,7 @@ p {
 }
 
 .jumbotron {
-    padding-top: 9rem;
+    padding-top: 5rem;
     padding-bottom: 6.5rem;
     margin-bottom: 0;
     background-color: #fff;
@@ -112,6 +112,16 @@ p {
 
 .section.lb {
     background-color: #f3f3f3;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row wrap;
+}
+
+@media only screen and (max-width:500px){
+    .section.lb {
+        flex-direction: column;
+        padding-bottom: 10rem;
+    }
 }
 
 .grid-style .col-md-3 {
